--- a/index.html
+++ b/index.html
@@ -806,8 +806,8 @@
               <div class="address">
                 <i class="icofont-google-map"></i>
                 <h4>Location:</h4>
-                <p>13633 Steel Street
-                  Detroit, MI 48227</p>
+                <p>8119 Comanche Pass
+                  Converse, TX 78109</p>
               </div>
 
               <div class="email">
@@ -890,8 +890,8 @@
             <!-- <p >We will open a new office from the RevLocal's headquarter</p> -->
             <br>
             <p>
-              13633 Steel Street<br>
-              Detroit, MI 48227<br>
+              8119 Comanche Pass<br>
+              Converse, TX 78109<br>
               United States <br><br>
               <strong>Phone:</strong> 313.286.8257<br>
               <strong>Email:</strong> info@revup.live<br>
