Added Michael Okuto Section

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 
         <div class="section-title">
           <h2>Services</h2>
-          <p>“Outsourcing + RevUp + 3k auto tires llc = Peace of Mind” is what our clients experience as they partner with RevUp, a global market leader in custom software development. We reshape, connect, collaborate & construct the future of businesses with human-centric digital experiences. Our Agile Software Development Team has the expertise in all popular technologies along with AI, ML, AR/VR, IoT, DevOps, & Cloud. And stand distinct with our wide range of next-gen services to pave the success road for all types & sizes of business.</p>
+          <p>“Outsourcing + RevUp + 3k auto tires llc = Peace of Mind” is what our clients experience as they partner with RevUp, a global market leader in custom software development. We reshape, connect, collaborate & construct the future of businesses with human-centric digital experiences. Our Agile Software Development Team has the expertise in all popular technologies along with AI, ML, AR/VR, IoT, Crypto, DevOps, & Cloud. And stand distinct with our wide range of next-gen services to pave the success road for all types & sizes of business.</p>
         </div>
 
         <div class="row">
@@ -550,6 +550,19 @@
             </div>
           </div>
 
+
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+            <div class="member">
+              <div class="member-img">
+                <img src="assets/img/team/Michael.jpg" class="img-fluid" alt="">
+              </div>
+              <div class="member-info">
+                <h4>Michael Okuto</h4>
+                <span>Project Manager</span>
+              </div>
+            </div>
+          </div>
+
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <div class="member-img">
@@ -658,17 +671,7 @@
           </div>
 
 
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
-            <div class="member">
-              <div class="member-img">
-                <img src="assets/img/team/Michael.jpg" class="img-fluid" alt="">
-              </div>
-              <div class="member-info">
-                <h4>Michael Okuto</h4>
-                <span>SAP Developer</span>
-              </div>
-            </div>
-          </div>
+    
 
 
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
